# CESS

./: .gitignore  ALGORITHM-REGISTRY.md  CONFORMANCE.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE-SPEC  PATENTS.md  README.md  verify.toml  verify.toml.asc
.cursor/rules/: cess-style.mdc
cess-standard/: ALGORITHM-REGISTRY.md  CONFORMANCE.md  CONTRIBUTING.md  IMPLEMENTATIONS.md  LICENSE-CODE  STYLE-GUIDE.md
cess-standard/runner/: README.md
cess-standard/scripts/: brainpool_ecdh_common.py  rfc6932_brainpool.py  rfc7027_brainpool.py
cess-standard/spec/: CESS-v0.1.md  CRYPTO.md
cess-standard/vectors/: argon2id.toml  pin_wrap.toml  rejection.toml  rfc6932_brainpool.toml  wycheproof_chacha.toml
integrity/: sha256.toml  shamir.toml
keys/: wycheproof.asc
runner/: Cargo.toml  README.md
runner/src/: blake3_integrity.rs  ecdh_p512_inner.rs  ed25519_signing.rs  hkdf_blake3.rs  lib.rs  main.rs  twofish_bulk.rs  vector_manifest.rs
runner/tests/: kat_vectors.rs  twofish_suite_ids.rs
scripts/: generate_vectors.py  rfc5639_brainpool_domain_parameters.py  verify_p512_ecdh_kat.py
spec/: CESS-v0.1.md  CESS-v0.2.md  CRYPTO.md  GOVERNMENT.md
testdata/rfc7027/: rfc7027_brainpool_tls_ecdh.json
vectors/: README.md  argon2id.toml  blake3_integrity.toml  bulk_aead.toml  classical_suite_id_matrix.toml  ecdh_brainpool.toml  ecdh_p512_inner.toml  ed25519_signing.toml  hkdf_blake3.toml  integration.toml  pin_wrap.toml  reed_solomon.toml  rejection.toml  rfc5639_brainpool.toml  rfc6932_brainpool.toml  rfc7027_brainpool.toml  sss.toml  twofish.toml  wycheproof_chacha.toml
(+6 files in other folders)
