[package]
name = "cess-runner"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "CESS conformance test runner (loads vectors; crypto checks are extended incrementally)"
default-run = "cess-runner"

[dependencies]
# Pinned versions for reproducibility. Brainpool ECDH uses `elliptic_curve` + `primeorder`
# without the `p384` crate entry point to avoid pulling SHA-2 as a transitive dependency
# (SHA-2 is on the CESS exclusion list for protocol use; see CONTRIBUTING.md).
toml = "0.8.12"
serde = { version = "1.0.217", features = ["derive"] }
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
hkdf = "0.12.4"
hmac = "0.12.1"
reed-solomon-erasure = "6.0.0"
serpent = "0.6.0-rc.3"
twofish = "0.7.1"
poly1305 = "0.8.0"
generic-array = "0.14.7"
typenum = "1.17.0"
universal-hash = "0.5.1"
cipher = "0.5.1"
hex = "0.4.3"
serde_json = "1.0.128"
bp256 = { version = "0.14.0-rc.8", features = ["arithmetic"] }
bp384 = { version = "0.14.0-rc.8", features = ["arithmetic"] }
# Enables SecretKey::diffie_hellman for runner/src/bin/rfc6932_brainpool.rs (bp256/bp384 use the same crate).
elliptic-curve = { version = "0.14.0-rc.29", default-features = false, features = ["alloc", "ecdh", "sec1"] }
ed25519-dalek = { version = "2.2.0", default-features = false }
# vsss-rs omitted (pulls SHA-256 family via dependency graph). SSS over GF(2^8) is verified
# against vectors using the same field arithmetic as `scripts/generate_vectors.py`.
